--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="sixteen wide mobile four wide tablet four wide computer column center aligned ">
                     <br>
                     <div class="ui circular image" id="profile">
-                        <img src="./images/yuexiang2.jpg">
+                        <img src="./images/yuexiang.jpeg">
                     </div>
                 </div>
                 <div class="sixteen wide mobile twelve wide tablet twelve wide computer column">
@@ -82,16 +82,16 @@
                     I'm currently a third-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
                     of Computer Science and Engineering</a> at The Ohio State University (OSU). I'm fortunately working
                     with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> in <a href="https://u.osu.edu/ihudas/" target="_blank">SunLab</a>.
-                    I have broad interests in NLP with the emphasis on Question Answering (QA) and Clinical NLP
-                    as well as Data Mining with the emphasis on Graph Embedding, Graph Mining and their applications in
-                    the biomedical and clinical doamin.
+                    I have broad interests in Natural Language Processing with an emphasis on Question Answering (QA).
+                    Particularly, my research aims to build trustworthy QA systems in the wild, which must retain high
+                    standard aspects
+                    such as generalization, privacy awareness, and transparency. I aspire one day we can place an
+                    enormous trust in QA systems.
                 </p>
                 <p>
                     Prior to joining OSU, I received my B.E. in the <a href="http://cs.whu.edu.cn/" target="_blank">School
                     of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a
-                        href="http://zhangwenlab.cn/indexen.html">Prof. Wen Zhang</a> in
-                    <a href="http://bioinfotech.cn/en/" target="_blank">Biomedical Big Data
-                        Mining Lab</a>.
+                        href="http://zhangwenlab.cn/indexen.html">Prof. Wen Zhang</a> in data mining and bioinformatics.
                 </p>
 
 
@@ -101,6 +101,12 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+                    <li>[May 2021] - Our paper "Differential Privacy for Text Analytics via Natural Text Sanitization
+                        " has been accepted to <b>ACL-IJCNLP 2021, Findings</b>! We propose a privacy-preserving NLP
+                        pipeline
+                        (which consists of DP-based text sanitization mechanisms, sanitization-aware language model
+                        pretraining and finetuning)
+                    </li>
                     <li>[Sept 2020] - Our paper "PHICON: Improving Generalization of Clinical Text De-identification
                         Models via Data Augmentation" has been accepted to EMNLP'20 Clinical NLP Workshop!
                     <li>[July 2020] - Attended ACL 2020 and presented our Clinical Reading Comprehension work. Check out
@@ -108,8 +114,11 @@
                         <a href="https://slideslive.com/38929136/clinical-reading-comprehension-a-thorough-analysis-of-the-emrqa-dataset"
                            target="_blank">slides and video</a>
                     </li>
-                    <li>[April 2020] - Our paper "Clinical Reading Comprehension: A Thorough Analysis of the emrQA Dataset" has been accepted to <b>ACL 2020</b>!
-                        We conduct a comprehensive study on the Clinical Reading Comprehension task based on the recently-released <b>emrQA</b> dataset!
+
+                    <li>[April 2020] - Our paper "Clinical Reading Comprehension: A Thorough Analysis of the emrQA
+                        Dataset" has been accepted to <b>ACL 2020</b>!
+                        We conduct a comprehensive study on the Clinical Reading Comprehension task based on the
+                        recently-released <b>emrQA</b> dataset!
                     <li>[Sept 2019] - Our paper "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" has been accepted to <b>Bioinformatics</b>.
                         Check out our <b>Graph Embedding Evaluation</b> Python package <a href="https://github.com/xiangyue9607/BioNEV"> BioNEV </a> on GitHub!  </li>
                     <li>[AUG 2019] - Attend SIGKDD 2019 conference at Anchorage, Alaska. Honored to receive KDD Student Travel Award!
@@ -137,7 +146,7 @@
             </div>
 
             <div class="ui section divider"></div>
-            <p>Last Updated: 05/2019</p>
+            <p>Last Updated: 05/2021</p>
             <div class="content" id="visit-map">
                 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=YG4fd7cKyrWe5QsX9iygEQ2x0a4jIRTeWb-qYyJ0xsI&cl=ffffff&w=a"></script>
             </div>
