--- a/publication.html
+++ b/publication.html
@@ -38,9 +38,25 @@
 			<div class="ui top attached">
 
 				<div class="content">
-                    <h3 class="title">NLP (Question Answering, Clinical NLP)</h3>
+                    <h3 class="title">NLP (Question Answering, Clinical NLP, Privacy-preserving NLP)</h3>
                     <p>*: Equal Contributions</p>
                     <ul>
+                        <li>
+                            <p><a href="" target="">Differential Privacy for Text Analytics via Natural Text
+                                Sanitization
+                            </a><br>
+                                <b><u>Xiang Yue</u></b>*, Minxin Du*, Tianhao Wang, Yaliang Li, Huan Sun and Sherman S.
+                                M. Chow<br>
+                                <i>The Joint Conference of the 59th Annual Meeting of the Association for Computational
+                                    Linguistics and the 11th International Joint Conference on Natural Language
+                                    Processing
+                                </i><br>
+                                <i><b>(ACL-IJCNLP 2021, Findings, Long Paper)</b></i><br>
+                                <!--                                <a href="https://arxiv.org/abs/2010.16021" target="_blank">[arXiv version]</a>-->
+                                <!--                                <a href="https://github.com/sunlab-osu/CliniQG4QA" target="_blank">[Code]</a>-->
+                            </p>
+                        </li>
+
                         <li>
                             <p><a href="https://arxiv.org/abs/2010.16021" target="_blank">CliniQG4QA: Generating Diverse
                                 Questions for Domain Adaptation of Clinical Question Answering
