--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="sixteen wide mobile four wide tablet four wide computer column center aligned ">
                     <br>
                     <div class="ui circular image" id="profile">
-                        <img src="./images/yuexiang.jpeg">
+                        <img src="images/profile.jpeg">
                     </div>
                 </div>
                 <div class="sixteen wide mobile twelve wide tablet twelve wide computer column">
