--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
             <div class="content">
                 <h3>Bio</h3>
                 <p>
-                    I'm currently a third-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
+                    I'm currently a 4th-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
                     of Computer Science and Engineering</a> at The Ohio State University (OSU). I'm fortunately working
-                    with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> in <a href="https://u.osu.edu/ihudas/" target="_blank">SunLab</a>.
+                    with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> in <a
+                        href="https://u.osu.edu/ihudas/" target="_blank">SunLab</a>.
                     I have broad interests in Natural Language Processing with an emphasis on Question Answering (QA).
                     Particularly, my research aims to build trustworthy QA systems in the wild, which must retain high
                     standard aspects
@@ -101,7 +102,15 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
-                    <li>[May 2021] - Our paper "Differential Privacy for Text Analytics via Natural Text Sanitization
+                    <li>[Aug 2021] - Our short paper "COUGH: A Challenge Dataset and Models for COVID-19 FAQ Retrieval"
+                        has been accepted to <b>EMNLP 2021</b> main conference!
+                    <li>[May 2021] - Our team has been selected in the <a
+                            href="https://developer.amazon.com/alexaprize">
+                        Alexa Prize TaskBot Challenge</a> as one of 10 teams over 125 applications initiated from 15
+                        countries!
+                        We will build a smart dialogue system to help users finish Cooking and DIY tasks.
+                    <li>[May 2021] - Our long paper "Differential Privacy for Text Analytics via Natural Text
+                        Sanitization
                         " has been accepted to <b>ACL-IJCNLP 2021, Findings</b>! We propose a privacy-preserving NLP
                         pipeline
                         (which consists of DP-based text sanitization mechanisms, sanitization-aware language model
@@ -146,7 +155,7 @@
             </div>
 
             <div class="ui section divider"></div>
-            <p>Last Updated: 05/2021</p>
+            <p>Last Updated: 08/2021</p>
             <div class="content" id="visit-map">
                 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=YG4fd7cKyrWe5QsX9iygEQ2x0a4jIRTeWb-qYyJ0xsI&cl=ffffff&w=a"></script>
             </div>
