--- a/misc.html
+++ b/misc.html
@@ -62,6 +62,7 @@
         <div class="ui top attached">
             <div class="content">
                 <ul>
+                    <li>2020 Best Annual Student Research Poster, OSU CSE
                     <li>SIGKDD 2020, 2019 Student Travel Award</li>
                     <li>June 2018, Excellent Graduation Thesis Award of WHU (Scale: 5%)</li>
                     <li>May 2018, Outstanding Graduates of WHU (Scale: 10%)</li>
