--- a/publication.html
+++ b/publication.html
@@ -42,6 +42,17 @@
                     <p>*: Equal Contributions</p>
                     <ul>
                         <li>
+                            <p><a href="https://arxiv.org/abs/2010.12800" target="_blank">COUGH: A Challenge Dataset
+                                and Models for COVID-19 FAQ Retrieval</a><br>
+                                Frederick Zhang, Heming Sun, <b><u>Xiang Yue</u></b>, Simon
+                                Lin and Huan Sun<br>
+                                <i>The 2021 Conference on Empirical Methods in Natural Language Processing</i><br>
+                                <i><b>(EMNLP 2021, Short Paper)</b></i><br>
+                                <a href="https://github.com/sunlab-osu/covid-faq" target="_blank">[Datasets]</a>
+                            </p>
+                        </li>
+
+                        <li>
                             <p><a href="" target="">Differential Privacy for Text Analytics via Natural Text
                                 Sanitization
                             </a><br>
@@ -61,7 +72,7 @@
                             <p><a href="https://arxiv.org/abs/2010.16021" target="_blank">CliniQG4QA: Generating Diverse
                                 Questions for Domain Adaptation of Clinical Question Answering
                             </a><br>
-                                <b><u>Xiang Yue</u></b>*, Xinliang Frederick Zhang*, Ziyu Yao, Simon Lin, Huan Sun<br>
+                                <b><u>Xiang Yue</u></b>*, Frederick Zhang*, Ziyu Yao, Simon Lin, Huan Sun<br>
                                 <i>Machine Learning for Health Workshop at NeurIPS 2020</i><br>
                                 <a href="https://arxiv.org/abs/2010.16021" target="_blank">[arXiv version]</a>
                                 <a href="https://github.com/sunlab-osu/CliniQG4QA" target="_blank">[Code]</a>
@@ -78,16 +89,6 @@
                                 <a href="https://github.com/xiangyue9607/CliniRC" target="_blank">[Code]</a>
                                 <a href="https://slideslive.com/38929136/clinical-reading-comprehension-a-thorough-analysis-of-the-emrqa-dataset"
                                    target="_blank">[Slides & Video]</a>
-                            </p>
-                        </li>
-
-                        <li>
-                            <p><a href="https://arxiv.org/abs/2010.12800" target="_blank">COUGH: A Challenge Dataset
-                                and Models for COVID-19 FAQ Retrieval</a><br>
-                                Xinliang Frederick Zhang, Heming Sun, <b><u>Xiang Yue</u></b>, Emmett Jesrani, Simon
-                                Lin, Huan Sun<br>
-                                <i>arXiv Preprint</i><br>
-                                <a href="https://github.com/sunlab-osu/covid-faq" target="_blank">[Datasets]</a>
                             </p>
                         </li>
 
