--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+                    <li>[Dec 2021] - Our paper "CliniQG4QA: Generating Diverse
+                        Questions for Domain Adaptation of Clinical Question Answering" has received the <span
+                                class="textred">IEEE BIBM 2021 Best Paper Award!</span></li>
                     <li>[Aug 2021] - Our short paper "COUGH: A Challenge Dataset and Models for COVID-19 FAQ Retrieval"
                         has been accepted to <b>EMNLP 2021</b> main conference!
                     <li>[May 2021] - Our team has been selected in the <a
@@ -128,12 +131,13 @@
                         Dataset" has been accepted to <b>ACL 2020</b>!
                         We conduct a comprehensive study on the Clinical Reading Comprehension task based on the
                         recently-released <b>emrQA</b> dataset!
-                    <li>[Sept 2019] - Our paper "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" has been accepted to <b>Bioinformatics</b>.
-                        Check out our <b>Graph Embedding Evaluation</b> Python package <a href="https://github.com/xiangyue9607/BioNEV"> BioNEV </a> on GitHub!  </li>
-                    <li>[AUG 2019] - Attend SIGKDD 2019 conference at Anchorage, Alaska. Honored to receive KDD Student Travel Award!
-                    <li>[JUN 2019] - Attend GREAT <a href="http://ciss.deephack.me/" target="_blank">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.
-                        Check our project "<a href="ciss_project" target="_blank">ACISSTANT: an intelligent CISS assistant bot!</a>"</li>
-                    <li>[Apr 2019] - Our paper "Synonym Discovery on Privacy-Aware Clinical Data" has been accepted by <b>SIGKDD 2019</b></li>
+                    </li>
+                    <!--                    <li>[Sept 2019] - Our paper "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" has been accepted to <b>Bioinformatics</b>.-->
+                    <!--                        Check out our <b>Graph Embedding Evaluation</b> Python package <a href="https://github.com/xiangyue9607/BioNEV"> BioNEV </a> on GitHub!  </li>-->
+                    <!--                    <li>[AUG 2019] - Attend SIGKDD 2019 conference at Anchorage, Alaska. Honored to receive KDD Student Travel Award!-->
+                    <!--                    <li>[JUN 2019] - Attend GREAT <a href="http://ciss.deephack.me/" target="_blank">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.-->
+                    <!--                        Check our project "<a href="ciss_project" target="_blank">ACISSTANT: an intelligent CISS assistant bot!</a>"</li>-->
+                    <!--                    <li>[Apr 2019] - Our paper "Synonym Discovery on Privacy-Aware Clinical Data" has been accepted by <b>SIGKDD 2019</b></li>-->
                     <!--<li>[Nov 2018] - Our paper "LncRNA-Protein interaction prediction" has been accepted by <i><b><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">PLOS Computational Biology</a></b></i>!-->
                     <!--<li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>-->
                     <!--<li>[Sept 2018] - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>-->
@@ -143,7 +147,7 @@
                     <!--<li>[May 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by<i><b> Methods</b></i> and <i><b>BMC Bioinformatics.</b></i></li>-->
                     <!--<li>[May 2018] - Win Outstanding Graduates of WHU (top 10%)</li>-->
                     <!--<li>Nov.13 - Attend the conference <a href="https://muii.missouri.edu/bibm2017/" target="_blank">BIBM 2017</a> and-->
-                        <!--give reports in Kansas City, MO, USA-->
+                    <!--give reports in Kansas City, MO, USA-->
                     <!--</li>-->
                     <!--<li>Oct.10 - Win LEI JUN Scholarship (Top 1 Winners of National Scholarship, the HIGHEST prize in-->
                         <!--WHU)-->
