--- a/publication.html
+++ b/publication.html
@@ -42,6 +42,21 @@
                     <p>*: Equal Contributions</p>
                     <ul>
                         <li>
+                            <p><a href="https://arxiv.org/abs/2010.16021" target="_blank">CliniQG4QA: Generating Diverse
+                                Questions for Domain Adaptation of Clinical Question Answering
+                            </a><br>
+                                <b><u>Xiang Yue</u></b>*, Frederick Zhang*, Ziyu Yao, Simon Lin, Huan Sun<br>
+                                <i>IEEE Internatinal Conference on Bioinformatics and Biomedicine 2021 <b>(BIBM
+                                    2021)</b></i><br>
+                                <span class="textred">(Best Paper Award)</span>
+                                <a href="https://arxiv.org/abs/2010.16021" target="_blank">[arXiv version]</a>
+                                <a href="https://github.com/sunlab-osu/CliniQG4QA" target="_blank">[Code]</a><br>
+                                <a href="pdf/CliniQG4QA-poster.pdf" target="_blank">Poster Version</a> in <i>Machine
+                                    Learning for Health Workshop at NeurIPS 2020</i><br>
+                            </p>
+                        </li>
+
+                        <li>
                             <p><a href="https://arxiv.org/abs/2010.12800" target="_blank">COUGH: A Challenge Dataset
                                 and Models for COVID-19 FAQ Retrieval</a><br>
                                 Frederick Zhang, Heming Sun, <b><u>Xiang Yue</u></b>, Simon
@@ -68,16 +83,6 @@
                             </p>
                         </li>
 
-                        <li>
-                            <p><a href="https://arxiv.org/abs/2010.16021" target="_blank">CliniQG4QA: Generating Diverse
-                                Questions for Domain Adaptation of Clinical Question Answering
-                            </a><br>
-                                <b><u>Xiang Yue</u></b>*, Frederick Zhang*, Ziyu Yao, Simon Lin, Huan Sun<br>
-                                <i>Machine Learning for Health Workshop at NeurIPS 2020</i><br>
-                                <a href="https://arxiv.org/abs/2010.16021" target="_blank">[arXiv version]</a>
-                                <a href="https://github.com/sunlab-osu/CliniQG4QA" target="_blank">[Code]</a>
-                            </p>
-                        </li>
 
                         <li>
                             <p><a href="https://www.aclweb.org/anthology/2020.acl-main.410/" target="_blank">Clinical
