--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+                    <li>[Mar 2022] - Two recent papers about question answering got accepted by <b>ACL 2022 main
+                        conference</b>: "Synthetic Question Value Estimation for
+                        Domain Adaptation of Question Answering" and "C-MORE: Pretraining to Answer Open-Domain
+                        Questions by Consulting Millions of References"
+                    </li>
+                    <li>[Mar 2022] - I will join Microsoft Research to explore NLP+Privacy for my 2022 summer
+                        internship!
+                    </li>
                     <li>[Dec 2021] - Our paper "CliniQG4QA: Generating Diverse
                         Questions for Domain Adaptation of Clinical Question Answering" has received the <span
                                 class="textred">IEEE BIBM 2021 Best Paper Award!</span></li>
