--- a/publication.html
+++ b/publication.html
@@ -42,6 +42,31 @@
                     <p>*: Equal Contributions</p>
                     <ul>
                         <li>
+                            <p><a href="https://arxiv.org/abs/2203.08926" target="_blank">Synthetic Question Value
+                                Estimation for Domain Adaptation of Question Answering
+                            </a><br>
+                                <b><u>Xiang Yue</u></b>, Ziyu Yao, Huan Sun<br>
+                                <i>60th Annual Meeting of the Association for Computational Linguistics <b>(ACL 2022
+                                    Main Conference)</b></i><br>
+                                <a href="https://arxiv.org/abs/2203.08926" target="_blank">[arXiv version]</a>
+                                <a href="https://github.com/xiangyue9607/QVE" target="_blank">[Code]</a><br>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="https://arxiv.org/abs/2203.08928" target="_blank">C-MORE: Pretraining to Answer
+                                Open-Domain Questions by Consulting Millions of References
+                            </a><br>
+                                <b><u>Xiang Yue</u></b>, Xiaoman Pan, Wenlin Yao, Dian Yu, Dong Yu, Jianshu Chen<br>
+                                <i>60th Annual Meeting of the Association for Computational Linguistics <b>(ACL 2022
+                                    Main Conference)</b></i><br>
+                                <a href="https://arxiv.org/abs/2203.08928" target="_blank">[arXiv version]</a>
+                                <a href="https://github.com/xiangyue9607/C-MORE" target="_blank">[Code]</a>
+                                <a href="http://web.cse.ohio-state.edu/~yue.149/C-MORE/data/"
+                                   target="_blank">[Dataset]</a><br>
+                            </p>
+                        </li>
+                        <li>
                             <p><a href="https://arxiv.org/abs/2010.16021" target="_blank">CliniQG4QA: Generating Diverse
                                 Questions for Domain Adaptation of Clinical Question Answering
                             </a><br>
@@ -62,8 +87,8 @@
                                 Frederick Zhang, Heming Sun, <b><u>Xiang Yue</u></b>, Simon
                                 Lin and Huan Sun<br>
                                 <i>The 2021 Conference on Empirical Methods in Natural Language Processing</i><br>
-                                <i><b>(EMNLP 2021, Short Paper)</b></i><br>
-                                <a href="https://github.com/sunlab-osu/covid-faq" target="_blank">[Datasets]</a>
+                                <i><b>(EMNLP 2021)</b></i><br>
+                                <a href="https://github.com/sunlab-osu/covid-faq" target="_blank">[Dataset]</a>
                             </p>
                         </li>
 
@@ -89,7 +114,7 @@
                                 Reading Comprehension: A Thorough Analysis of the emrQA Dataset</a><br>
                                 <b><u>Xiang Yue</u></b>, Bernal Jimenez Gutierrez and Huan Sun<br>
                                 <i>The 58th Annual Meeting of the Association for Computational Linguistics<b> (ACL
-                                    2020, long paper)</b></i><br>
+                                    2020)</b></i><br>
                                 <a href="https://arxiv.org/abs/2005.00574" target="_blank">[arXiv version]</a>
                                 <a href="https://github.com/xiangyue9607/CliniRC" target="_blank">[Code]</a>
                                 <a href="https://slideslive.com/38929136/clinical-reading-comprehension-a-thorough-analysis-of-the-emrqa-dataset"
@@ -147,17 +172,17 @@
                             </p>
                         </li>
 
-                        <li>
-                            <p>
-                                <a href="https://academic.oup.com/bib/advance-article-abstract/doi/10.1093/bib/bbaa140/5876601?redirectedFrom=fulltext"
-                                   target="_blank">Tensor decomposition with relational constraints for predicting
-                                    multiple types of microRNA-disease associations</a><br>
-                                Feng Huang*, <b><u>Xiang Yue</u>*</b>, Zhankun Xiong, Zhouxin Yu, Shichao Liu, Wen Zhang<br>
-                                <i><b>Briefings in Bioinformatics</b></i> <b>(Impact Factor: 8.990</b>) <br>
-                                <a href="https://arxiv.org/abs/1911.05584" target="_blank">[arXiv version]</a>
-                                <a href="https://github.com/BioMedicalBigDataMiningLab/TDRC" target="_blank">[Code&Datasets]</a>
-                            </p>
-                        </li>
+                        <!--                        <li>-->
+                        <!--                            <p>-->
+                        <!--                                <a href="https://academic.oup.com/bib/advance-article-abstract/doi/10.1093/bib/bbaa140/5876601?redirectedFrom=fulltext"-->
+                        <!--                                   target="_blank">Tensor decomposition with relational constraints for predicting-->
+                        <!--                                    multiple types of microRNA-disease associations</a><br>-->
+                        <!--                                Feng Huang*, <b><u>Xiang Yue</u>*</b>, Zhankun Xiong, Zhouxin Yu, Shichao Liu, Wen Zhang<br>-->
+                        <!--                                <i><b>Briefings in Bioinformatics</b></i> <b>(Impact Factor: 8.990</b>) <br>-->
+                        <!--                                <a href="https://arxiv.org/abs/1911.05584" target="_blank">[arXiv version]</a>-->
+                        <!--                                <a href="https://github.com/BioMedicalBigDataMiningLab/TDRC" target="_blank">[Code&Datasets]</a>-->
+                        <!--                            </p>-->
+                        <!--                        </li>-->
 
                         <li>
                             <p><a href="https://arxiv.org/pdf/1906.09285.pdf" target="_blank">SurfCon: Synonym Discovery
@@ -172,39 +197,39 @@
                             </p>
                         </li>
 
-                        <li>
-                            <p><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions</a>
-                                <br>
-                                Wen Zhang, <b><u>Xiang Yue</u></b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang
-                                <br>
-                                <i>PLOS Computational Biology</i> (14 (12): e1006616) <b>(Impact Factor: 4.428</b>)
-                                <br>
-                                <a href="http://bioinfotech.cn/SFPEL-LPI/" target="_blank">Web Server</a> | <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1006616.s001&type=supplementary" target="_blank">Suppl Proof</a> | <a href="http://www.bioinfotech.cn/static/ssgll/download/SFPEL%20code%26dataset.rar" target="_blank">Code&Dataset</a>
-                            </p>
-                        </li>
+                        <!--                        <li>-->
+                        <!--                            <p><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions</a>-->
+                        <!--                                <br>-->
+                        <!--                                Wen Zhang, <b><u>Xiang Yue</u></b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang-->
+                        <!--                                <br>-->
+                        <!--                                <i>PLOS Computational Biology</i> (14 (12): e1006616) <b>(Impact Factor: 4.428</b>)-->
+                        <!--                                <br>-->
+                        <!--                                <a href="http://bioinfotech.cn/SFPEL-LPI/" target="_blank">Web Server</a> | <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1006616.s001&type=supplementary" target="_blank">Suppl Proof</a> | <a href="http://www.bioinfotech.cn/static/ssgll/download/SFPEL%20code%26dataset.rar" target="_blank">Code&Dataset</a>-->
+                        <!--                            </p>-->
+                        <!--                        </li>-->
 
-                        <li>
-                            <p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2220-4" target="_blank">Predicting drug-disease associations by using similarity constrained matrix factorization</a>
-                                <br>
-                                Wen Zhang, <b><u>Xiang Yue</u></b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng
-                                Liu
-                                <br>
-                                <i>BMC Bioinformatics</i> (2018 Vol 19:233)
-                                <br>
-                                <a href="http://www.bioinfotech.cn/SCMFDD" target="_blank">Web Server</a> | <a href="https://github.com/xiangyue9607/SCMFDD" target="_blank">Code&Datasets</a>
-                            </p>
-                        </li>
+                        <!--                        <li>-->
+                        <!--                            <p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2220-4" target="_blank">Predicting drug-disease associations by using similarity constrained matrix factorization</a>-->
+                        <!--                                <br>-->
+                        <!--                                Wen Zhang, <b><u>Xiang Yue</u></b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng-->
+                        <!--                                Liu-->
+                        <!--                                <br>-->
+                        <!--                                <i>BMC Bioinformatics</i> (2018 Vol 19:233)-->
+                        <!--                                <br>-->
+                        <!--                                <a href="http://www.bioinfotech.cn/SCMFDD" target="_blank">Web Server</a> | <a href="https://github.com/xiangyue9607/SCMFDD" target="_blank">Code&Datasets</a>-->
+                        <!--                            </p>-->
+                        <!--                        </li>-->
 
 
-                        <li>
-                            <p><a href="https://www.sciencedirect.com/science/article/pii/S1046202318300045" target="_blank">Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network</a>
-                                <br>
-                                Wen Zhang, <b><u>Xiang Yue</u></b>, Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang,
-                                Chunyang Ruan
-                                <br>
-                                <i>Methods</i> (2018 Vol 145:51-59)
-                            </p>
-                        </li>
+                        <!--                        <li>-->
+                        <!--                            <p><a href="https://www.sciencedirect.com/science/article/pii/S1046202318300045" target="_blank">Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network</a>-->
+                        <!--                                <br>-->
+                        <!--                                Wen Zhang, <b><u>Xiang Yue</u></b>, Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang,-->
+                        <!--                                Chunyang Ruan-->
+                        <!--                                <br>-->
+                        <!--                                <i>Methods</i> (2018 Vol 145:51-59)-->
+                        <!--                            </p>-->
+                        <!--                        </li>-->
 
                         <!--<li>-->
                         <!--<p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-019-2644-5" target="_blank">Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition</a>-->
