--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <!--                        of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a-->
                     <!--                            href="http://zhangwenlab.cn/indexen.html">Prof. Wen Zhang</a> in data mining and bioinformatics.-->
                     <!--                    </p>-->
-                    <i class="flag icon"></i><span class="textred"> I'm looking for full-time positions (I will graduate in 2023 summer)!
+                    <i class="flag icon"></i><span class="textred"> I'm looking for full-time positions (I will graduate in 2023)!
                     Feel free to drop me an email if you have openings! </span> <a href="./Xiang%20Yue-CV.pdf"
                                                                                    target="_blank">CV (Sept. 2022)</a>
                 </p>
