--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                 <div class="discription">
                     <h3>What's New</h3>
                     <ul>
+                        <li>[Oct 2022] Check out our new preprint on <a href="https://arxiv.org/abs/2210.14348">Synthetic
+                            Text Generation with Differential Privacy</a>
+                            .
+                        </li>
                         <li>[June 2022] Our OSU TacoBot team earned the <b>third-place honor ($50K)</b> in the first <a
                                 href="https://developer.amazon.com/alexaprize">Alexa Prize TaskBot Challenge</a>!
                             10 teams were selected worldwide out of 125 initiated applications to participate in the
