--- a/publication.html
+++ b/publication.html
@@ -41,6 +41,17 @@
                     <h3 class="title">NLP (Question Answering, Clinical NLP, Privacy-preserving NLP)</h3>
                     <p>*: Equal Contributions</p>
                     <ul>
+
+                        <li>
+                            <p><a href="https://arxiv.org/abs/2210.14348" target="_blank">Synthetic Text Generation with
+                                Differential Privacy: A Simple and Practical Recipe
+                            </a><br>
+                                <b><u>Xiang Yue</u></b>, Huseyin A. Inan, Xuechen Li, Girish Kumar, Julia McAnallen,
+                                Huan Sun, David Levitan, Robert Sim<br>
+                                <i>arXiv preprint</i><br>
+                            </p>
+                        </li>
+
                         <li>
                             <p><a href="https://arxiv.org/abs/2203.08926" target="_blank">Synthetic Question Value
                                 Estimation for Domain Adaptation of Question Answering
